# decent

./: .clippy.toml  .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG  Cargo.toml  Makefile  README.md  README.rst  rust-toolchain.toml
src/decent/: Cargo.toml  HISTORY.md  README.md
src/decent-cli/: Cargo.toml  README.md
src/decent-cli/src/: main.rs
src/decent/src/: api.rs  hash.rs  lib.rs
src/decent/src/v2/: mod.rs
